fixed search bar alignment issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -39,8 +39,8 @@ h1 {
   border: 2px solid teal;
   color: teal;
   font-size: 1.4em;
-  padding-top: 2px;
-  padding-bottom: 9px;
+  padding-top: 4px;
+  padding-bottom: 8px;
   margin-right: 10px;
   background-color: rgb(95%, 95%, 95%);
 }
